# revisao/src/modulos/usuario/controllers/controller.js
@@ -7,7 +7,7 @@ const jwt = require('jsonwebtoken');
 const bcrypt = require('bcrypt');
 const secret_key = process.env.SECRET_KEY;
 
-// Excluir a imagem
+// Função para excluir imagem
 const excluir_imagem = (caminhoImagem) => {
     const caminhoCompleto = path.join(__dirname, '../../../', caminhoImagem);
     if (caminhoImagem && fs.existsSync(caminhoCompleto)) {
@@ -15,7 +15,37 @@ const excluir_imagem = (caminhoImagem) => {
     }
 };
 
-// Mostrar todos os usuarios
+// Login do usuário
+exports.login = async (req, res) => {
+    const { email, senha } = req.body;
+    try {
+        console.log(`Tentativa de login com o email: ${email}`);
+        const usuario = await Usuario.findOne({ where: { email } });
+        if (!usuario) {
+            return res.status(400).json({ error: 'Credenciais inválidas!' });
+        }
+        const senhaValida = await bcrypt.compare(senha, usuario.senha);
+        if (!senhaValida) {
+            return res.status(400).json({ error: 'Credenciais inválidas!' });
+        }
+
+        // Gerando token de login
+        const token = jwt.sign(
+            { id: usuario.id, email: usuario.email },
+            secret_key,
+            { expiresIn: '1y' }
+        );
+
+        console.log(`Token gerado: ${token}`);
+
+        res.json({ token });
+    } catch (error) {
+        res.status(500).json({ error: "Erro no servidor", detalhes: error.message });
+    }
+};
+
+
+// Mostrar todos os usuários
 exports.mostrarUsuarios = async (requisicao, resposta) => {
     try {
         const usuarios = await Usuario.findAll();
@@ -25,20 +55,20 @@ exports.mostrarUsuarios = async (requisicao, resposta) => {
     }
 };
 
-// Mostrar usuario especifico
+// Mostrar usuário específico
 exports.buscarPorId = async (requisicao, resposta) => {
     try {
         const usuario = await Usuario.findByPk(requisicao.params.id);
         if (!usuario) {
-            return resposta.status(404).json({ error: 'Usuario não encontrado!' });
+            return resposta.status(404).json({ error: 'Usuário não encontrado!' });
         }
         resposta.status(200).json(usuario);
     } catch (error) {
-        resposta.status(500).json({ error: 'Erro ao buscar usuario!', detalhes: error.message });
+        resposta.status(500).json({ error: 'Erro ao buscar usuário!', detalhes: error.message });
     }
 };
 
-// Cadastrar usuarios
+// Cadastrar usuários
 exports.cadastrarUsuario = [
     upload.single('foto_perfil'),
     async (requisicao, resposta) => {
@@ -48,14 +78,13 @@ exports.cadastrarUsuario = [
             if (requisicao.file) {
                 dadosUsuario.foto_perfil = requisicao.file.filename;
             }
-            const apiKey = jwt.sign({
-                id: dadosUsuario.email //fulano@email.com
-                },
+            const apiKey = jwt.sign(
+                { id: dadosUsuario.email },
                 secret_key,
                 { expiresIn: '1y' }
             );
-            dadosUsuario.api_key = apiKey
- 
+            dadosUsuario.api_key = apiKey;
+
             const novoUsuario = await Usuario.create(dadosUsuario, { transaction: transacao });
             await transacao.commit();
             resposta.status(201).json(novoUsuario);
@@ -64,7 +93,7 @@ exports.cadastrarUsuario = [
             if (requisicao.file) {
                 excluir_imagem(`/modulos/usuario/upload/${requisicao.file.filename}`);
             }
-            resposta.status(500).json({ error: 'Erro ao criar um novo usuario', detalhes: error.message });
+            resposta.status(500).json({ error: 'Erro ao criar um novo usuário', detalhes: error.message });
         }
     }
 ];
@@ -101,26 +130,26 @@ exports.editarUsuario = [
     }
 ];
 
-// Deletar usuario por id
+// Deletar usuário por ID
 exports.deletarUsuarioPorID = async (requisicao, resposta) => {
     try {
         const usuario = await Usuario.findByPk(requisicao.params.id);
         if (!usuario) {
-            return resposta.status(404).json({ error: 'Usuario não encontrado' });
+            return resposta.status(404).json({ error: 'Usuário não encontrado' });
         }
-        
+
         if (usuario.foto_perfil) {
             excluir_imagem(`/modulos/usuario/upload/${usuario.foto_perfil}`);
         }
-        
+
         await usuario.destroy();
-        resposta.status(200).json({ mensagem: 'Usuario deletado com sucesso!' });
+        resposta.status(200).json({ mensagem: 'Usuário deletado com sucesso!' });
     } catch (error) {
-        resposta.status(500).json({ error: 'Erro ao deletar usuario', detalhes: error.message });
+        resposta.status(500).json({ error: 'Erro ao deletar usuário', detalhes: error.message });
     }
 };
 
-// Deletar todos os usuarios
+// Deletar todos os usuários
 exports.deletarUsuarios = async (requisicao, resposta) => {
     try {
         const usuarios = await Usuario.findAll();
@@ -129,15 +158,18 @@ exports.deletarUsuarios = async (requisicao, resposta) => {
                 excluir_imagem(`/modulos/usuario/upload/${usuario.foto_perfil}`);
             }
         }
-        
+
         await Usuario.destroy({
             where: {},
             truncate: false
         });
 
         await sequelize.query("DELETE from sqlite_sequence where name= 'Usuario';");
-        resposta.status(200).json({ mensagem: 'Todos os usuarios do banco foram deletados.' });
+        resposta.status(200).json({ mensagem: 'Todos os usuários do banco foram deletados.' });
     } catch (error) {
-        resposta.status(500).json({ error: 'Erro ao deletar usuarios', detalhes: error.message });
+        resposta.status(500).json({ error: 'Erro ao deletar usuários', detalhes: error.message });
     }
 };
+
+// Log para verificar exportações
+console.log(exports.editarUsuario);
