# revisao/src/modulos/usuario/routes/routes.js
@@ -1,33 +1,30 @@
 const express = require('express');
-const { mostrarUsuarios, 
-    buscarPorId, 
-    cadastrarUsuario, 
-    editarUsuario,
-    deletarUsuarioPorID,
-    deletarUsuarios } = require('../controllers/controller');
+const { login, mostrarUsuarios, buscarPorId, cadastrarUsuario, editarUsuario, deletarUsuarioPorID, deletarUsuarios } = require('../controllers/controller');
 const rota = express.Router();
-
-
+const autenticar = require('../../middleware/autenticacao'); // Correção na importação
+const multer = require('multer');
+const upload = multer();
 rota.use(express.json());
 
-// rota para mostrar usuarios
-rota.get('/usuario', mostrarUsuarios)
+// Rota de login do usuario 
+rota.post('/login', upload.none(), login);
 
-// rota para mostrar usuario por id
-rota.get('/usuario/:id', buscarPorId)
+// Rota para mostrar usuários
+rota.get('/usuario', autenticar, mostrarUsuarios);
 
-// rota para editar usuario por id
-rota.put('/usuario/:id',  editarUsuario)
+// Rota para mostrar usuário por id
+rota.get('/usuario/:id',autenticar, buscarPorId);
 
-// rota para deletar usuario por id
-rota.delete('/usuario/:id', deletarUsuarioPorID)
+// Rota para editar usuário por id
+rota.put('/usuario/:id', autenticar, editarUsuario);
 
-// rota para cadastrar usuario
-rota.post('/usuario', cadastrarUsuario)
+// Rota para deletar usuário por id
+rota.delete('/usuario/:id', autenticar, deletarUsuarioPorID);
 
-// rota para deletar todos os usuarios
-rota.delete('/usuario', deletarUsuarios)
+// Rota para cadastrar usuário
+rota.post('/usuario', cadastrarUsuario);
+
+// Rota para deletar todos os usuários
+rota.delete('/usuario', autenticar, deletarUsuarios);
 
 module.exports = rota;
-
-
